<resources>
    <string name="app_name">IEEE</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ieee_student_branch">IEEE Student Branch</string>
    <string name="text_one">
    The world largest technical professional organization for the advancement of technology
    </string>
    <string name="text_two">
    Why are we here
    </string>
    <string name="learn_more">Learn More</string>
    <string name="student_branch">Student Branch</string>
    <string name="ieee">IEEE</string>
    <string name="about_us">About Us</string>
    <string name="point_one">IEEE Student Branch falls under IEEE Bombay Section, a technical network of doctoral, masters, and undergraduate students of ABV-IIITM Gwalior, was established on April 12,2019.</string>
    <string name="_01">01</string>
    <string name="_02">02</string>
    <string name="point_two">This association enables students to utilize the benefits of IEEE membership, including scholarships, competitions, and conference grants.</string>
  <string name="point_three">Aims to organize social and technical activities that promotes sharing of knowledge in science, technology, and engineering.</string>
<string name="point_four">IEEE Student Branch becomes an intermidiate for students to be a part of the global IEEE community and share their ideas with IEEE brances all over the world.</string>
    <string name="_03">03</string>
    <string name="_04">04</string>
    <string name="announcements">Announcements</string>
    <string name="Announcement_content">Hacksagon 2020 Results are out!!</string>
    <string name="our_mentors">Our Mentors</string>
    <string name="director_abv_iiitm_gwalior">Director ABV IIItm Gwalior</string>
    <string name="prof_rajendra_sahu">Prof. Rajendra Sahu</string>
    <string name="dr_somesh_kumar">Dr. Somesh Kumar</string>
    <string name="faculty_coordinator_abv_iiitm_gwalior">Faculty Coordinator, ABV IIITM Gwalior</string>
    <string name="hacksagon_2020">HACKSAGON 2020:</string>
    <string name="visit_site">Visit Site</string>
<string name="battlezone_content">Battlezone 2020 is the first edition of gaming events going to be organized byABV-IIITM IEEE Student Branch, Gwalior, on 13th and 14th August, which includes the Battle Royale game PUBG, COD, which provides an electrifying experience and the malevolent political Chess game, all with a total cash prize of Rs. 15K+ with sponsored goodies, gifts and certificates. Grab the oppurtunity and be a part of our first ever captivating BattleZone</string>
</resources>