<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/bg" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/ieee_student_branch"
                android:textColor="@color/deep_pink"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginStart="50dp" />
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/text_one"
            android:textAlignment="gravity"
            android:textColor="@color/dark_grey"
            android:textSize="15sp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_corners"
            android:text="@string/learn_more"
            android:textColor="#FFF"
            app:backgroundTint="#03A9F4"
            app:iconPadding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_two"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/about_us"
            android:textColor="#00BFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="150dp"
                android:layout_height="400dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/about"
                android:layout_marginStart="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
            <TextView
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/_01"
                android:textColor="@color/deep_pink"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/point_one"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_marginStart="5dp" />

                    <TextView
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/_02"
                    android:textColor="@color/deep_pink"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/point_two"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:layout_marginStart="5dp" />
                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/_03"
                        android:textColor="@color/deep_pink"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/point_three"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:layout_marginStart="5dp" />
                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/_04"
                        android:textColor="@color/deep_pink"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/point_four"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:layout_marginStart="5dp" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/announcements"
                android:gravity="center_horizontal"
                android:textColor="@color/deep_pink"
                android:textStyle="bold"
                android:textSize="35sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Announcement_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/our_mentors"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textColor="@color/deep_pink"
                android:textStyle="bold"
                android:textSize="30sp"
                />
            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/card_bg"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"/>
            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="150dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="6dp"
                app:cardBackgroundColor="#FFF"
                android:layout_gravity="center_horizontal"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/rsahu"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:gravity="center_horizontal"
                    android:text="@string/prof_rajendra_sahu"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/director_abv_iiitm_gwalior"
                android:textColor="@color/dark_grey"
                android:textStyle="normal"
                android:layout_marginTop="130dp"
                android:gravity="center_horizontal" />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/card_bg"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginTop="20dp" />
            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="150dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="6dp"
                app:cardBackgroundColor="#FFF"
                android:layout_gravity="center_horizontal"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/someshk"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:gravity="center_horizontal"
                    android:text="@string/dr_somesh_kumar"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faculty_coordinator_abv_iiitm_gwalior"
                    android:textColor="@color/dark_grey"
                    android:textStyle="normal"
                    android:layout_marginTop="130dp"
                    android:gravity="center_horizontal" />



            </androidx.cardview.widget.CardView>

        </LinearLayout>




    </ScrollView>

</FrameLayout>