<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.EventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CURRENT EVENTS"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:padding="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/hacksagon_2020"
                android:textColor="@color/deep_pink"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Results are Announced"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_corners"
            android:text="@string/visit_site"
            android:textColor="#FFF"
            app:backgroundTint="#03A9F4"
            app:iconPadding="8dp" />

        <Button
            android:layout_width="150dp"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_corners"
            android:text="View Winners"
            android:textColor="#FFF"
            app:backgroundTint="#03A9F4"
            app:iconPadding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PAST EVENTS"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center"
            android:padding="10sp"/>
        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/past_events"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Battle Zone"
             android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/battlezone_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/learn_more"
                android:textColor="#FFF"
                app:backgroundTint="#03A9F4"
                app:iconPadding="8dp" />


        </LinearLayout>


    </LinearLayout>




    </ScrollView>
</FrameLayout>